--- a/Nancy.Embedded.Tests/Nancy.Embedded.Tests.csproj
+++ b/Nancy.Embedded.Tests/Nancy.Embedded.Tests.csproj
@@ -50,6 +50,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ShouldExtensions.cs" />
     <Compile Include="Unit\EmbeddedStaticContentConventionBuilderFixture.cs" />
     <Compile Include="Unit\EmbeddedViewLocationProviderFixture.cs" />
