--- a/Nancy.Embedded/Nancy.Embedded.csproj
+++ b/Nancy.Embedded/Nancy.Embedded.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>Nancy.Embedded.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\Nancy.Embedded.XML</DocumentationFile>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
