--- a/Nancy.Embedded.Tests/Nancy.Embedded.Tests.csproj
+++ b/Nancy.Embedded.Tests/Nancy.Embedded.Tests.csproj
@@ -77,8 +77,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Subfolder\embedded2.txt" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
