Rename Embedded file response class
i don't want to confuse my class with the default Nancy class used for
embedded file responses.

--- a/Nancy.Embedded/Nancy.Embedded.csproj
+++ b/Nancy.Embedded/Nancy.Embedded.csproj
@@ -51,7 +51,7 @@
     </Compile>
     <Compile Include="Conventions\EmbeddedStaticContentConventionsExtensions.cs" />
     <Compile Include="Conventions\EmbeddedStaticContentConventionBuilder.cs" />
-    <Compile Include="EmbeddedFileResponse.cs" />
+    <Compile Include="EmbeddedResponse.cs" />
     <Compile Include="EmbeddedViewLocationProvider.cs" />
     <Compile Include="Registrations.cs" />
   </ItemGroup>
