GZip when the header allows it

--- a/Nancy.EmbeddedContent.Tests/Nancy.EmbeddedContent.Tests.csproj
+++ b/Nancy.EmbeddedContent.Tests/Nancy.EmbeddedContent.Tests.csproj
@@ -54,6 +54,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="ShouldExtensions.cs" />
+    <Compile Include="Unit\EmbeddedResponseTests.cs" />
     <Compile Include="Unit\EmbeddedStaticContentConventionBuilderFixture.cs" />
     <Compile Include="Unit\EmbeddedViewLocationProviderFixture.cs" />
   </ItemGroup>
