--- a/Nancy.EmbeddedContent.Tests/Nancy.EmbeddedContent.Tests.csproj
+++ b/Nancy.EmbeddedContent.Tests/Nancy.EmbeddedContent.Tests.csproj
@@ -51,9 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SharedAssemblyInfo.cs">
-      <Link>Properties\SharedAssemblyInfo.cs</Link>
-    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShouldExtensions.cs" />
     <Compile Include="Unit\EmbeddedStaticContentConventionBuilderFixture.cs" />
     <Compile Include="Unit\EmbeddedViewLocationProviderFixture.cs" />
